# Autoware.ai.annotation1

./: .gitignore  README.md  readme.txt
src/autoware/documentation/autoware_quickstart_examples/: CMakeLists.txt  README.md  package.xml
src/autoware/documentation/autoware_quickstart_examples/config/: ndt_mapping.rviz
src/autoware/documentation/autoware_quickstart_examples/launch/: tf_local.launch
src/autoware/documentation/autoware_quickstart_examples/launch/rosbag_demo/: README.md  default.rviz  my_detection.launch  my_mission_planning.launch  my_motion_planning.launch  my_sensing.launch
src/autoware/messages/autoware_external_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/autoware/messages/autoware_map_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/autoware/messages/autoware_map_msgs/msg/: Area.msg  AreaArray.msg  Lane.msg  LaneArray.msg  LaneAttributeRelation.msg  LaneAttributeRelationArray.msg  LaneChangeRelation.msg  LaneChangeRelationArray.msg  LaneRelation.msg  LaneRelationArray.msg  LaneSignalLightRelation.msg  LaneSignalLightRelationArray.msg  OppositeLaneRelation.msg  OppositeLaneRelationArray.msg  Point.msg  PointArray.msg  Signal.msg  SignalArray.msg  SignalLight.msg  SignalLightArray.msg  Wayarea.msg  WayareaArray.msg  Waypoint.msg  WaypointArray.msg  WaypointLaneRelation.msg  WaypointLaneRelationArray.msg  WaypointRelation.msg  WaypointRelationArray.msg  WaypointSignalRelation.msg  WaypointSignalRelationArray.msg
src/autoware/messages/tablet_socket_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/drivers/awf_drivers/analog_devices/: CMakeLists.txt  package.xml
src/drivers/awf_drivers/analog_devices/launch/: adis16470.launch  adxl345.launch
src/drivers/awf_drivers/as/: CMakeLists.txt  interface.yaml  package.xml
src/drivers/awf_drivers/as/include/as/: ssc_interface.h
src/drivers/awf_drivers/as/launch/: ssc_interface.launch
src/drivers/awf_drivers/as/src/: ssc_interface.cpp  ssc_interface_node.cpp
src/drivers/awf_drivers/autoware_driveworks_gmsl_interface/: CMakeLists.txt  package.xml
src/drivers/awf_drivers/autoware_driveworks_gmsl_interface/include/: DeviceArguments.hpp  DriveWorksApi.hpp  SekonixGmslCamera.hpp  cv_connection.hpp
src/drivers/awf_drivers/autoware_driveworks_gmsl_interface/src/gmsl_camera_multiple/: DriveWorksApi.cpp  SekonixGmslCamera.cpp  cv_connection.cpp  gmsl_node.cpp  gmsl_nodelets.cpp
src/drivers/awf_drivers/autoware_driveworks_interface/: CMakeLists.txt  package.xml
src/drivers/awf_drivers/autoware_driveworks_interface/include/: tensorrt_interface.hpp
src/drivers/awf_drivers/autoware_driveworks_interface/launch/: gmsl_interface.launch  tensorrt_interface.launch
src/drivers/awf_drivers/autoware_driveworks_interface/nodes/gmsl_interface/: gmsl_interface_node.cpp
src/drivers/awf_drivers/autoware_driveworks_interface/nodes/tensorrt_interface/: tensorrt_interface_node.cpp
src/drivers/awf_drivers/baumer/: CMakeLists.txt  package.xml
src/drivers/awf_drivers/baumer/launch/: baumer.launch
src/drivers/awf_drivers/baumer/nodes/vlg22/src/: bgapi_init.cpp  vlg22_main.cpp
src/drivers/awf_drivers/custom_msgs/: CMakeLists.txt  package.xml
src/drivers/awf_drivers/garmin/: CMakeLists.txt  package.xml
src/drivers/awf_drivers/hokuyo/: CMakeLists.txt  package.xml
src/drivers/awf_drivers/hokuyo/nodes/hokuyo_3d/: vssp.hpp  vsspdefs.hpp
src/drivers/awf_drivers/javad_navsat_driver/: CMakeLists.txt  package.xml
src/drivers/awf_drivers/kvaser/: CMakeLists.txt  package.xml
src/drivers/awf_drivers/kvaser/nodes/can_converter/: can_converter.cpp
src/drivers/awf_drivers/kvaser/nodes/can_draw/: can_draw.cpp
src/drivers/awf_drivers/kvaser/nodes/can_listener/: can_listener.cpp
src/drivers/awf_drivers/lms5xx/: CMakeLists.txt  package.xml
src/drivers/awf_drivers/lms5xx/launch/: lms511.launch
src/drivers/awf_drivers/lms5xx/nodes/lms511/src/: lms5xx_node.cpp
src/drivers/awf_drivers/memsic/: CMakeLists.txt  package.xml
src/drivers/awf_drivers/memsic/nodes/vg440/: vg440_node.cpp
src/drivers/awf_drivers/microstrain/: CMakeLists.txt  package.xml
src/drivers/awf_drivers/microstrain/include/microstrain_driver/: GX4-45_Test.h  microstrain.h
src/drivers/awf_drivers/microstrain/src/: microstrain.cpp
src/drivers/awf_drivers/nmea_navsat/: CMakeLists.txt  package.xml
src/drivers/awf_drivers/pointgrey/: CMakeLists.txt  package.xml
src/drivers/awf_drivers/pointgrey/nodes/grasshopper3/: grasshopper3.cpp
src/drivers/awf_drivers/pointgrey/nodes/ladybug/: ladybug.cpp
src/drivers/awf_drivers/pointgrey/scripts/: grasshopper3.launch  ladybug.launch  spinnaker.launch
src/drivers/awf_drivers/sick_ldmrs_driver/: CMakeLists.txt  package.xml
src/drivers/awf_drivers/sick_ldmrs_driver/src/driver/src/: BasicDatatypes.hpp  CMakeLists.txt  main.cpp  manager.cpp  manager.hpp
src/drivers/awf_drivers/sick_ldmrs_driver/src/driver/src/application/: BasicApplication.cpp  BasicApplication.hpp  LdmrsApp.cpp  LdmrsApp.hpp  LdmrsFieldApp.cpp  LdmrsFieldApp.hpp  LdmrsNtpTimeApp.cpp  LdmrsNtpTimeApp.hpp  LdmrsScanpointCoordinateApp.cpp  LdmrsScanpointCoordinateApp.hpp  LdmrsSectorChangeApp.cpp  LdmrsSectorChangeApp.hpp
src/drivers/awf_drivers/sick_ldmrs_driver/src/driver/src/datatypes/: Box2D.cpp  Box2D.hpp  Circle2D.cpp  Circle2D.hpp  Ellipse2D.cpp  Ellipse2D.hpp  EvalCase.cpp  EvalCase.hpp  EvalCaseResult.cpp  EvalCaseResult.hpp  EvalCaseResults.cpp  EvalCaseResults.hpp  EvalCases.cpp  EvalCases.hpp  FieldDescription.cpp  FieldDescription.hpp  FieldParameter.cpp  FieldParameter.hpp  Fields.cpp  Fields.hpp  Line2D.cpp  Line2D.hpp  Measurement.cpp  Measurement.hpp  Msg.cpp  Msg.hpp  Object.cpp  Object.hpp  Point2D.cpp  Point2D.hpp  Point3D.cpp  Point3D.hpp  Polygon2D.cpp  Polygon2D.hpp  Polygon3D.cpp  Polygon3D.hpp  Position3D.cpp  Position3D.hpp  PositionWGS84.cpp  PositionWGS84.hpp  (+10 more)
src/drivers/awf_drivers/sick_ldmrs_driver/src/driver/src/devices/: BasicDevice.cpp  (+5 more)
src/drivers/awf_drivers/sick_ldmrs_msgs/: CMakeLists.txt  package.xml
src/drivers/awf_drivers/sick_ldmrs_tools/: CMakeLists.txt  package.xml
(+110 files in other folders)
