<?xml version="1.0"?>
<package format="2">
  <name>autoware_quickstart_examples</name>
  <version>1.12.0</version>
  <description>Contains the launch files for Autoware's rosbag demo.</description>

  <maintainer email="autoware@todo.todo">autoware</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
