<?xml version="1.0"?>
<package format="2">
  <name>autoware_driveworks_gmsl_interface</name>
  <version>1.12.0</version>
  <description>
    A collection of node(let)s that publish images from one or multiple gmsl cameras
  </description>
  <maintainer email="punnu@parkopedia.com">Punnu PHAIRATT</maintainer>
  <license>BSD</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>libglew-dev</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_gmsl_camera.xml" />
  </export>
</package>
