<?xml version="1.0"?>
<package format="2">
  <name>autoware_driveworks_interface</name>
  <version>1.12.0</version>
  <description>The autoware_driveworks packages</description>
  <maintainer email="yusuke.fujii@tier4.jp">Yusuke FUJII</maintainer>
  <author email="yusuke.fujii@tier4.jp">Yusuke FUJII</author>
  <author email="abrahammonrroy@yahoo.com">amc</author>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
