<?xml version="1.0"?>
<package format="2">
  <name>vlg22c_cam</name>
  <version>1.12.0</version>
  <description>A ROS Driver for VLG-22C Camera</description>
  <maintainer email="abrahammonrroy@yahoo.com">amc-nu</maintainer>
  <author email="abrahammonrroy@yahoo.com">amc-nu</author>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>camera_info_manager</depend>
  <depend>image_transport</depend> 
  <depend>roscpp</depend> 
  <depend>sensor_msgs</depend> 
  <depend>std_msgs</depend> 
</package>
