<?xml version="1.0"?>
<package format="2">
  <name>hokuyo</name>
  <version>1.12.0</version>
  <description>The hokuyo package</description>
  <maintainer email="kondoh@todo.todo">kondoh</maintainer>
  <author email="atsushi.w@atr.jp">Atsushi Watanabe</author>
  <author email="yukky@ubi.cs.ritsumei.ac.jp">Yukihiro Saito</author>
  <license>BSD</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
