<?xml version="1.0"?>
<package format="2">
  <name>kvaser</name>
  <version>1.12.0</version>
  <description>can tools package</description>
  <maintainer email="etake.a7m2@gmail.com">etake</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_can_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
