<?xml version="1.0"?>
<package format="2">
  <name>sick_lms5xx</name>
  <version>1.12.0</version>
  <description>Drivers for the Sick Lidar line of devices</description>
  <maintainer email="yuki.kitsukawa@tier4.jp">Yuki KITSUKAWA</maintainer>
  <url type="website">https://github.com/pangfumin/lms511_laser</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
</package>
