<?xml version="1.0"?>
<package format="2">
  <name>memsic_imu</name>
  <version>1.12.0</version>
  <description>The memsic_imu package</description>
  <maintainer email="yuki@ertl.jp">kitsukawa</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
</package>
