<?xml version="1.0"?>
<package format="2">
  <name>autoware_pointgrey_drivers</name>
  <version>1.12.0</version>
  <description>The autoware_pointgrey_drivers package</description>
  <maintainer email="kondoh@axe-inc.co.jp">Masao KONDOH</maintainer>
  <maintainer email="abrahammonrroy@yahoo.com">Abraham Monrroy</maintainer>
  <maintainer email="border_goldenmarket@yahoo.com">Daisuke Nishimatsu</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <exec_depend>gscam</exec_depend>
  <exec_depend>v4l-utils</exec_depend>
</package>
