<?xml version="1.0"?>
<package format="2">
  <name>sick_ldmrs_driver</name>
  <version>1.12.0</version>
  <description>
    A ROS driver for the SICK LD-MRS series of laser scanners.
  </description>
  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>
  <author email="ros@jochen.sprickerhof.de">Jochen Sprickerhof</author>
  <url type="website">http://wiki.ros.org/sick_ldmrs_driver</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pcl_conversions</depend>
  <depend>robot_state_publisher</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>sick_ldmrs_description</depend>
  <depend>sick_ldmrs_msgs</depend>
  <depend>tf</depend>

  <exec_depend>diagnostic_aggregator</exec_depend>
</package>
