<?xml version="1.0"?>
<package format="2">
  <name>sick_ldmrs_msgs</name>
  <version>1.12.0</version>
  <description>Messages and PCL point types for SICK LD-MRS.</description>
  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>
  <author email="ros@jochen.sprickerhof.de">Jochen Sprickerhof</author>
  <url type="website">http://wiki.ros.org/sick_ldmrs_msgs</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
